# TechMentor-LLM

./: .gitignore  README.md  day3_plan.md  day4_plan.md  inference.ipynb  main.py  plan.md  pyproject.toml
data/processed/: eval.jsonl  train.jsonl
data/raw/: hf_interview.json  kaggle_questions.csv
data/scripts/: clean_data.py  convert_to_alpaca.py  download_data.py
docs/: README.md  generate_documentation.py
evaluation/: before_after.md
notebooks/: colab_finetune_hf.ipynb  colab_finetune_unsloth.ipynb  dataset_report.ipynb
reports/: dataset_stats.json  sample_records.md
training/: config.py  prompts.py  requirements.txt  utils.py  validate_dataset.py
training/scripts/: __init__.py  generate_comparison.py  train_hf.py  train_hf_cpu.py  train_unsloth.py  validate_dataset.py
