[project]
name = "techmentor-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "kagglehub>=0.3",
    "huggingface-hub>=0.20",
    "fsspec>=2024.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "wandb>=0.17",
]

[project.optional-dependencies]
train = [
    "transformers>=4.43",
    "datasets>=2.20",
    "trl>=0.9",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    "torch>=2.4",
    "unsloth",
]
docs = [
    "fpdf2>=2.8",
]
